--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,29 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# see https://color.adobe.com/Gettysburg-color-theme-209416
+set $IMPORTANT #962D3E
+set $UNFOCUSED_BG #343642
+set $UNFOCUSED_FG #F2EBC7
+set $FOCUSED_INACTIVE_FG #242632
+set $FOCUSED_INACTIVE_BG #E2DBB7
+set $FOCUSED_BG #040612
+set $FOCUSED_FG #F2EBC7
+
+# class                 border  backgr. text    indicator child_border
+client.focused          $FOCUSED_BG $FOCUSED_BG $FOCUSED_FG $IMPORTANT $FOCUSED_FG
+client.focused_inactive $FOCUSED_INACTIVE_BG $UNFOCUSED_INACTIVE_BG $FOCUSED_INACTIVE_FG $IMPORTANT $FOCUSED_INACTIVE_FG
+client.unfocused        $UNFOCUSED_BG $UNFOCUSED_BG $UNFOCUSED_FG $IMPORTANT $UNFOCUSED_FG
+client.urgent           $UNFOCUSED_BG $UNUNFOCUSED_BG $IMPORTANT $IMPORTANT $UNFOCUSED_FG
+client.background $UNFOCUSED_BG
+
+new_window pixel 4
+new_float pixel 4
+
+focus_follows_mouse no
+
 set $mod Mod1
+set $ws2 music
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -97,7 +119,7 @@ bindsym $mod+a focus parent
 
 # switch to workspace
 bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
+bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
@@ -109,7 +131,7 @@ bindsym $mod+0 workspace 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
@@ -160,10 +182,20 @@ bindsym $mod+F10 exec "pulseaudio-ctl mute"
 bindsym $mod+F12 exec "pulseaudio-ctl up"
 bindsym $mod+F11 exec "pulseaudio-ctl down"
 
+assign [class="Spotify"] $ws2
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
+				colors {
+						background $FOCUSED_BG
+						statusline $FOCUSED_FG
+						focused_workspace $FOCUSED_BG $FOCUSED_BG $FOCUSED_FG
+						inactive_workspace $UNFOCUSED_BG $UNFOCUSED_BG $UNFOCUSED_FG
+						urgent_workspace $IMPORTANT $IMPORTANT $FOCUSED_BG
+				}
 }
 exec /usr/lib/gnome-settings-daemon/gnome-settings-daemon
+exec --no-startup-id dunst
 exec xrandr --output HDMI-0 --off
