--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -8,16 +8,25 @@
 
 general {
         colors = true
+        color_good = "#348899"
+        color_bad = "#962D3E"
+        color_degraded = "#FFFFFF"
         interval = 5
 }
 
+order += "spotify"
+order += "pomodoro"
 order += "volume master"
-order += "disk /"
-order += "disk /home"
+# order += "disk /"
+# order += "disk /home"
 # order += "wireless _first_"
-order += "ethernet _first_"
+# order += "ethernet _first_"
 order += "cpu_usage"
 order += "tztime local"
+
+pomodoro {
+  format = '{mmss}'
+}
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
