--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -21,7 +21,12 @@ order += "volume master"
 # order += "wireless _first_"
 # order += "ethernet _first_"
 order += "cpu_usage"
+order += "external_script fan"
 order += "tztime local"
+
+external_script fan {
+  script_path = "sensors | grep fan1 | awk '{print $2$3}'"
+}
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
