--- a/.config/i3/config
+++ b/.config/i3/config
@@ -70,7 +70,8 @@ bindsym $mod+Shift+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec dmenu_run
 
 # change focus
 bindsym $mod+j focus left
@@ -212,5 +213,5 @@ bar {
 }
 exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
 exec --no-startup-id dunst
-exec --no-startup-id xrandr --output HDMI-0 --off
+#exec --no-startup-id xrandr --output HDMI-0 --off
 exec --no-startup-id gnome-screensaver &
