--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -15,6 +15,7 @@ general {
 }
 
 order += "window_title_async"
+order += "taskwarrior"
 order += "hamster"
 order += "spotify"
 order += "volume master"
@@ -29,6 +30,11 @@ order += "tztime local"
 #extei3ipcrnal_script fan {
 #  script_path = "sensors | grep fan1 | awk '{print $2$3}'"
 #}
+#
+
+taskwarrior {
+  color = "FFFF00"
+}
 
 window_title_async {
     color = "#00FFFF"
