--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,7 +57,7 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec konsole
 bindsym $mod+Shift+g exec google-chrome-stable
 bindsym $mod+Shift+u exec upwork
 bindsym $mod+Shift+s exec spotify
@@ -217,6 +217,7 @@ bar {
 }
 exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
 exec --no-startup-id dunst
+exec --no-startup-id redshift
 #exec --no-startup-id xrandr --output HDMI-0 --off
 exec --no-startup-id gnome-screensaver &
 exec ~/.fehbg &
